--- a/fullstack_template/static/package.json
+++ b/fullstack_template/static/package.json
@@ -4,19 +4,32 @@
   "description": "Find study buddies!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -p --progress --config webpack.config.js",
+    "dev-build": "webpack --progress -d --config webpack.config.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --progress -d --config webpack.config.js --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/karentu/gaggle.git"
   },
   "keywords": [
-    "study"
+    "fullstack",
+    "python",
+    "react",
+    "npm",
+    "webpack"
   ],
-  "author": "",
+  "author": "Karen Tu, Shawna Huang, Vivian Hou",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/karentu/gaggle/issues"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "homepage": "https://github.com/karentu/gaggle#readme"
 }
