--- a/fullstack_template/static/package.json
+++ b/fullstack_template/static/package.json
@@ -47,8 +47,10 @@
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^1.2.0",
     "css-loader": "^0.28.9",
+    "file-loader": "^1.1.6",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1"
+    "style-loader": "^0.20.1",
+    "url-loader": "^0.6.2"
   }
 }
